app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.swiper {
  width: 100%;
  padding-bottom: 40px;
}

.swiper-slide {
  padding: 0 10px;
}

.swiper-pagination-bullet {
  background: #db0962;
  opacity: 0.5;
  width: 12px;
  height: 12px;
}

.swiper-pagination-bullet-active {
  opacity: 1;
}

.swiper-button-next,
.swiper-button-prev {
  color: #db0962;
}

@media (max-width: 768px) {
  .swiper-slide {
    padding: 0 5px;
  }
}

.iti {
  width: 100% !important;
  direction: ltr;
}

.iti__country-container {
  left: 0 !important;
}

.iti__sa {
  width: 50px;
}

.iti__selected-country-primary {
  background-color: rgb(203, 196, 196);
  width: 45px;
  display: flex;
  justify-content: center;
  margin-right: 5px;
}

.iti__arrow {
  display: none;
}

.arrow {
  display: none;
}

.selected-flag {
  padding: auto;
}

.selected-flag .flag {
  left: 13px !important;
}

